DOB format changed

--- a/who-we-are.html
+++ b/who-we-are.html
@@ -48,119 +48,119 @@
             <img src="/assets/photos/individuals/mrm.png" alt="Photo of Manremmawi">
             <div class="info">
                 <h1 class="name">manremmawi</h1>
-                <p class="dob">born 25 december 2000</p>
+                <p class="dob">DOB: 25 december 2000</p>
             </div>
         </div>
         <div class="individual">
             <img src="/assets/photos/individuals/nlc.png" alt="Photo of Nianglianching">
             <div class="info">
                 <h1 class="name">nianglianching</h1>
-                <p class="dob">born 19 march 2000</p>
+                <p class="dob">DOB: 19 march 2000</p>
             </div>
         </div>
         <div class="individual">
             <img src="/assets/photos/individuals/nnk.png" alt="Photo of Niangngaihkim">
             <div class="info">
                 <h1 class="name">niangngaihkim</h1>
-                <p class="dob">born 23 july 2000</p>
+                <p class="dob">DOB: 23 july 2000</p>
             </div>
         </div>
         <div class="individual">
             <img src="/assets/photos/individuals/chk.png" alt="Photo of Chinghoihkim">
             <div class="info">
                 <h1 class="name">chinghoihkim</h1>
-                <p class="dob">born 28 january 2000</p>
+                <p class="dob">DOB: 28 january 2000</p>
             </div>
         </div>
         <div class="individual">
             <img src="/assets/photos/individuals/lbh.png" alt="Photo of Lianbiakhoih">
             <div class="info">
                 <h1 class="name">lianbiakhoih</h1>
-                <p class="dob">born 28 may 2000</p>
+                <p class="dob">DOB: 28 may 2000</p>
             </div>
         </div>
         <div class="individual">
             <img src="/assets/photos/individuals/nmc.png" alt="Photo of Niangmuanching">
             <div class="info">
                 <h1 class="name">niangmuanching</h1>
-                <p class="dob">born 22 february 2000</p>
+                <p class="dob">DOB: 22 february 2000</p>
             </div>
         </div>
         <div class="individual">
             <img src="/assets/photos/individuals/mnn.png" alt="Photo of Manngaihnem">
             <div class="info">
                 <h1 class="name">manngaihnem</h1>
-                <p class="dob">born 6 july 2000</p>
+                <p class="dob">DOB: 6 july 2000</p>
             </div>
         </div>
         <div class="individual">
             <img src="/assets/photos/individuals/cgl.png" alt="Photo of Chingoulal">
             <div class="info">
                 <h1 class="name">chingoulal</h1>
-                <p class="dob">born 28 january 2000</p>
+                <p class="dob">DOB: 28 january 2000</p>
             </div>
         </div>
         <div class="individual">
             <img src="/assets/photos/individuals/lkd.png" alt="Photo of Liankhanding">
             <div class="info">
                 <h1 class="name">liankhanding</h1>
-                <p class="dob">born 13 june 2000</p>
+                <p class="dob">DOB: 13 june 2000</p>
             </div>
         </div>
         <div class="individual">
             <img src="/assets/photos/individuals/lk.png" alt="Photo of Liankhum">
             <div class="info">
                 <h1 class="name">liankhum</h1>
-                <p class="dob">born 10 june 2000</p>
+                <p class="dob">DOB: 10 june 2000</p>
             </div>
         </div>
         <div class="individual">
             <img src="/assets/photos/individuals/jm.png" alt="Photo of Johnmuan">
             <div class="info">
                 <h1 class="name">johnmuan</h1>
-                <p class="dob">born 19 december 2000</p>
+                <p class="dob">DOB: 19 december 2000</p>
             </div>
         </div>
         <div class="individual">
             <img src="/assets/photos/individuals/gms.png" alt="Photo of Ginmuansang">
             <div class="info">
                 <h1 class="name">ginmuansang</h1>
-                <p class="dob">born 19 september 2000</p>
+                <p class="dob">DOB: 19 september 2000</p>
             </div>
         </div>
         <div class="individual">
             <img src="/assets/photos/individuals/pll.png" alt="Photo of T Paulallian">
             <div class="info">
                 <h1 class="name">t paulallian</h1>
-                <p class="dob">born 16 june 2000</p>
+                <p class="dob">DOB: 16 june 2000</p>
             </div>
         </div>
         <div class="individual">
             <img src="/assets/photos/individuals/sm.png" alt="Photo of N Siammuan">
             <div class="info">
                 <h1 class="name">n siammuan</h1>
-                <p class="dob">born 18 january 2000</p>
+                <p class="dob">DOB: 18 january 2000</p>
             </div>
         </div>
         <div class="individual">
             <img src="/assets/photos/individuals/tbm.png" alt="Photo of H Thangbiakmang">
             <div class="info">
                 <h1 class="name">h thangbiakmang</h1>
-                <p class="dob">born 16 april 2000</p>
+                <p class="dob">DOB: 16 april 2000</p>
             </div>
         </div>
         <div class="individual">
             <img src="/assets/photos/individuals/gtm.png" alt="Photo of Ginthianmuang">
             <div class="info">
                 <h1 class="name">ginthianmuang</h1>
-                <p class="dob">born 6 september 2000</p>
+                <p class="dob">DOB: 6 september 2000</p>
             </div>
         </div>
         <div class="individual">
             <img src="/assets/photos/individuals/bs.png" alt="Photo of M Biaksang">
             <div class="info">
                 <h1 class="name">m biaksang</h1>
-                <p class="dob">born 9 august 2000</p>
+                <p class="dob">DOB: 9 august 2000</p>
             </div>
         </div>
     </main>
